# pyPromptEngg

./: .gitignore  README.md  _test.txt  jnb-001-gemini-prompts.ipynb  jnb-002-langchain.ipynb  jnb-003-langchain-retriever.ipynb  pyproject.toml  requirements.txt  t001_correct_text.py  t002_ner.py
data/: responses.csv  test.txt
examples/: prompt_hijacking.py  react_agent_impl.py
lessons/: README.md  y.ipynb
lessons/051_agentic_governance/: main.py  (+2 more)
notebooks/: jnb-000-0-template.ipynb  jnb-000-1-template.ipynb  jnb-001-gemini-prompts.ipynb  jnb-002-five-principles-of-prompting.ipynb  jnb-002-langchain.ipynb  jnb-003-text-model-applications.ipynb  jnb-004-chain-of-thought.ipynb  jnb-004-lm-finetuning-demo.ipynb  jnb-005-ape.ipynb  jnb-006-1-prompt-hijacking.ipynb  jnb-007-advanced-list-generation.ipynb  jnb-007-advanced_list_generation.ipynb  jnb-008-prompt-optimization.ipynb  jnb-009-ReAct-agent.ipynb  jnb-010-emotion-prompting.ipynb  jnb-012-personas-of-thought.ipynb  jnb-020-langchain.ipynb  jnb-021-summarizing-large-documents.ipynb  jnb-022-langchain-retriever.ipynb  jnb-030-function-calling.ipynb  jnb-040-function-calling.ipynb  jnb-040-lm-finetuning-demo.ipynb  jnb-050-agents.ipynb  jnb-060-llm-evaluation.ipynb  results.csv
prompts/: prompt_react_agent.py  prompts_text_apps.py  prompts_text_usecases.py
pyCode/: c001_math_tutor.py
pyprompteng.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: b2b_chat.py  current_weather.py  fnUtils.py  gemini.py  geminiChatBot.py  genAIClient.py  openai_client.py  simpleChatBot_chatgpt.py  y.py
utils/: file_ops.py
(+27 files in other folders)
